Accouracy of simulation upgraded using cpp_dec_float_100 from boost library. Also some small fixes and improvements.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,9 @@
 cmake_minimum_required(VERSION 3.10)
 project(CosmicGravitas)
 
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 add_executable(CosmicGravitas
     src/main.cpp
     src/Clock.cpp
@@ -12,18 +15,32 @@ if(NOT PNG)
     set(PNG_LIBRARY "C:/Program Files(x86)/libpng")
 endif()
 
+if(NOT BOOST)
+    set(BOOST_ROOT "D:\\boost_1_85_0")
+    set(BOOST_INCLUDEDIR "${BOOST_ROOT}/include")
+    set(BOOST_LIBRARYDIR "${BOOST_ROOT}/stage/lib")
+endif()
 
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
+find_package(Boost REQUIRED)
+
+
 
 target_include_directories(CosmicGravitas
     PUBLIC include/
     PUBLIC ${SDL2_INCLUDE_DIRS}
     PUBLIC ${SDL2IMAGE_INCLUDE_DIRS}
+    PUBLIC ${Boost_INCLUDE_DIRS}
 )
 
 if(WIN32 AND NOT MSVC)
-    target_link_libraries(CosmicGravitas PUBLIC ${SDL2_LIBRARIES} SDL2_image::SDL2_image mingw32)
+    target_link_libraries(CosmicGravitas 
+    PUBLIC ${SDL2_LIBRARIES} 
+    SDL2_image::SDL2_image mingw32     
+    PUBLIC ${Boost_LIBRARIES}
+)
+
 else()
     target_link_libraries(CosmicGravitas PUBLIC ${SDL2_LIBRARIES} SDL2_image::SDL2_image)
 endif()
