Centered camera and optimised rendering. Refactored CMakeLists.txt. Also some changes and improvements

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.10)
+cmake_minimum_required(VERSION 3.20)
 project(CosmicGravitas)
 
 set(CMAKE_CXX_STANDARD 17)
@@ -9,23 +9,10 @@ add_executable(CosmicGravitas
     src/Clock.cpp
 )
 
-if(NOT PNG)
-    set(PNG_LIBRARY "C:/Program Files(x86)/libpng")
-    set(PNG_PNG_INCLUDE_DIR "C:/Program Files(x86)/libpng/include")
-    set(PNG_LIBRARY "C:/Program Files(x86)/libpng")
-endif()
-
-if(NOT BOOST)
-    set(BOOST_ROOT "D:\\boost_1_85_0")
-    set(BOOST_INCLUDEDIR "${BOOST_ROOT}/include")
-    set(BOOST_LIBRARYDIR "${BOOST_ROOT}/stage/lib")
-endif()
-
+find_package(PNG REQUIRED)
 find_package(SDL2 REQUIRED)
 find_package(SDL2_image REQUIRED)
 find_package(Boost REQUIRED)
-
-
 
 target_include_directories(CosmicGravitas
     PUBLIC include/
@@ -40,12 +27,9 @@ if(WIN32 AND NOT MSVC)
     SDL2_image::SDL2_image mingw32     
     PUBLIC ${Boost_LIBRARIES}
 )
-
 else()
-    target_link_libraries(CosmicGravitas PUBLIC ${SDL2_LIBRARIES} SDL2_image::SDL2_image)
-endif()
-
-add_custom_target(copy_resources ALL
-    COMMAND ${CMAKE_COMMAND} -E copy_directory ${CMAKE_SOURCE_DIR}/res ${CMAKE_BINARY_DIR}/res
-    COMMENT "Copying resources to build directory"
+    target_link_libraries(CosmicGravitas 
+    PUBLIC ${SDL2_LIBRARIES}
+    SDL2_image::SDL2_image
 )
+endif()
