--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 add_executable(CosmicGravitas
-    src/main.cpp
+    src/Main.cpp
     src/Clock.cpp
 )
 
