--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,7 @@ project(CosmicGravitas VERSION 0.0.2)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+message(STATUS ${CMAKE_INSTALL_PREFIX})
 
 # Build type
 if(NOT CMAKE_BUILD_TYPE)
@@ -84,10 +85,6 @@ target_include_directories(CosmicGravitas
     PUBLIC ${Boost_INCLUDE_DIRS}
 )
 
-# if (MINGW AND WIN32)
-#     set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libgcc -static-libstdc++ -static")
-#     set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -static-libgcc -static-libstdc++ -static")
-# endif()
 
 if(WIN32 AND NOT MSVC)
     target_link_libraries(CosmicGravitas 
@@ -95,14 +92,6 @@ if(WIN32 AND NOT MSVC)
     PUBLIC SDL2::SDL2main
     PUBLIC SDL2_image::SDL2_image mingw32
     PUBLIC ${Boost_LIBRARIES}
-)
-elseif(WIN32 AND MINGW)
-    install(FILES
-        "${MINGW_PATH}/bin/libgcc_s_seh-1.dll"
-        "${MINGW_PATH}/bin/libstdc++-6.dll"
-        "${MINGW_PATH}/bin/libwinpthread-1.dll"
-        DESTINATION bin
-        COMPONENT library
 )
 else()
     target_link_libraries(CosmicGravitas 
@@ -112,6 +101,7 @@ else()
     PUBLIC ${Boost_LIBRARIES}
 )
 endif()
+
 
 # Post-build commands to copy SDL2 and SDL2_image DLLs (for Windows)
 if(WIN32)
